force-app/main/default/objects/df_160_vrger_brnetestamente__c/df_160_vrger_brnetestamente__c.object-meta.xml
<CustomObject>
    <label>Værger</label>
    <nameField>
        <label>Værger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Værgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>