force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/begr_valg_unsket_vrge__c.field-meta.xml
<CustomField>
    <fullName>begr_valg_unsket_vrge__c</fullName>
    <label>Begrundelse for valg som uønsket c87b1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>