force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/primr_vrge_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primær Værge</label>
    <type>Checkbox</type>
</CustomField>