force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/subsidire_vrger_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>subsidire_vrger_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiære værger</label>
    <type>Checkbox</type>
</CustomField>