force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/unsket_vrge_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>unsket_vrge_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uønsket værge</label>
    <type>Checkbox</type>
</CustomField>