force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/vlg_unsket_vrge__c.field-meta.xml
<CustomField>
    <fullName>vlg_unsket_vrge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg uønsket værge</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_unsket_vrge</relationshipLabel>
    <relationshipName>vlg_unsket_vrge</relationshipName>
    <type>Lookup</type>
</CustomField>