force-app/main/default/objects/df_160_vrger_brnetestamente__c/fields/vlg_vrge_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>vlg_vrge_brnetestamente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg værge</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_vrge_brnetestamente</relationshipLabel>
    <relationshipName>vlg_vrge_brnetestamente</relationshipName>
    <type>Lookup</type>
</CustomField>